Add Docker deployment configs and core service updates